Upgrade to gradle 4.8